# G2-EDAversi

./: CMakeLists.txt  README.md  ai.cpp  ai.h  controller.cpp  controller.h  main.cpp  model.cpp  model.h  opening_book.cpp  opening_book.h  transposition_table.cpp  transposition_table.h  view.cpp  view.h
ai/: ai_easy.cpp  ai_easy.h  ai_extreme.cpp  ai_extreme.h  ai_factory.cpp  ai_factory.h  ai_hard.cpp  ai_hard.h  ai_interface.h  ai_normal.cpp  ai_normal.h  opening_book.cpp  opening_book.h  transposition_table.cpp  transposition_table.h
view/: board_renderer.cpp  board_renderer.h  game_overlay.cpp  game_overlay.h  menu_system.cpp  menu_system.h  settings_overlay.cpp  settings_overlay.h  ui_components.cpp  ui_components.h  view.cpp  view.h  view_constants.h
